-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 2.7.1
-
None
gcc's asan reports a memorry issue when loading a project like qtcreator.pro with latest creator 2.7:
./bin/qtcreator creator27 2>&1 | python /usr/local/gcc-4.8/bin/asan_symbolize.py | c++filt
=================================================================
==19580== ERROR: AddressSanitizer: heap-buffer-overflow on address 0x6084002c65be at pc 0x7fa391ac03a2 bp 0x7fff0b8fc400 sp 0x7fff0b8fc3f8
READ of size 2 at 0x6084002c65be thread T0
#0 0x7fa391ac03a1 in qMemEquals /home/kkoehne/dev/qt/qt-5.1/qtbase/src/corelib/tools/qstring.cpp:283
#1 0x7fa391ac7c0a in operator==(QString const&, QString const&) /home/kkoehne/dev/qt/qt-5.1/qtbase/src/corelib/tools/qstring.cpp:2137
#2 0x7fa391bb032c in QHashNode<QString, QProcEnvKey>::same_key(unsigned int, QString const&) const /home/kkoehne/dev/qt/qt-5.1-gcc-4.8.0-64/qtbase/src/corelib/../../include/QtCore/../../../../qt-5.1/qtbase/src/corelib/tools/qhash.h:214 (discriminator 1)
#3 0x7fa391baf71f in QHash<QString, QProcEnvKey>::findNode(QString const&, unsigned int*) const /home/kkoehne/dev/qt/qt-5.1-gcc-4.8.0-64/qtbase/src/corelib/../../include/QtCore/../../../../qt-5.1/qtbase/src/corelib/tools/qhash.h:896 (discriminator 2)
#4 0x7fa391bad8aa in QHash<QString, QProcEnvKey>::operator[](QString const&) /home/kkoehne/dev/qt/qt-5.1-gcc-4.8.0-64/qtbase/src/corelib/../../include/QtCore/../../../../qt-5.1/qtbase/src/corelib/tools/qhash.h:747
#5 0x7fa391bace03 in QProcessEnvironmentPrivate::prepareName(QString const&) const /home/kkoehne/dev/qt/qt-5.1/qtbase/src/corelib/io/qprocess_p.h:154
#6 0x7fa391ba56e9 in QProcessEnvironment::value(QString const&, QString const&) const /home/kkoehne/dev/qt/qt-5.1/qtbase/src/corelib/io/qprocess.cpp:367
#7 0x7fa37b1f0a68 in QMakeGlobals::getEnv(QString const&) const /home/kkoehne/dev/creator-2.7/src/shared/proparser/qmakeglobals.cpp:264
#8 0x7fa37b20911f in QMakeEvaluator::evaluateExpression(unsigned short const*&, ProStringList*, bool) /home/kkoehne/dev/creator-2.7/src/shared/proparser/qmakeevaluator.cpp:444 (discriminator 1)
#9 0x7fa37b214b14 in QMakeEvaluator::expandVariableReferences(unsigned short const*&, int, bool) /home/kkoehne/dev/creator-2.7/src/shared/proparser/qmakeevaluator.cpp:1542
#10 0x7fa37b20c798 in QMakeEvaluator::visitProVariable(unsigned short, ProStringList const&, unsigned short const*&) /home/kkoehne/dev/creator-2.7/src/shared/proparser/qmakeevaluator.cpp:861
#11 0x7fa37b209e0b in QMakeEvaluator::visitProBlock(unsigned short const*) /home/kkoehne/dev/creator-2.7/src/shared/proparser/qmakeevaluator.cpp:527
#12 0x7fa37b209fa8 in QMakeEvaluator::visitProBlock(unsigned short const*) /home/kkoehne/dev/creator-2.7/src/shared/proparser/qmakeevaluator.cpp:536 (discriminator 1)
#13 0x7fa37b209c46 in QMakeEvaluator::visitProBlock(ProFile*, unsigned short const*) /home/kkoehne/dev/creator-2.7/src/shared/proparser/qmakeevaluator.cpp:506
#14 0x7fa37b211b86 in QMakeEvaluator::visitProFile(ProFile*, QMakeHandler::EvalFileType, QFlags<QMakeEvaluator::LoadFlag>) /home/kkoehne/dev/creator-2.7/src/shared/proparser/qmakeevaluator.cpp:1352
#15 0x7fa37b22c6ca in ProFileEvaluator::accept(ProFile*, QFlags<QMakeEvaluator::LoadFlag>) /home/kkoehne/dev/creator-2.7/src/shared/proparser/profileevaluator.cpp:198
#16 0x7fa378a54679 in Qt4ProjectManager::Qt4ProFileNode::evaluate() /home/kkoehne/dev/creator-2.7/src/plugins/qt4projectmanager/qt4nodes.cpp:1624
#17 0x7fa378a54366 in Qt4ProjectManager::Qt4ProFileNode::update() /home/kkoehne/dev/creator-2.7/src/plugins/qt4projectmanager/qt4nodes.cpp:1603
#18 0x7fa378a56ddb in Qt4ProjectManager::Qt4ProFileNode::applyEvaluate(Qt4ProjectManager::Qt4ProFileNode::EvalResult, bool) /home/kkoehne/dev/creator-2.7/src/plugins/qt4projectmanager/qt4nodes.cpp:1880
#19 0x7fa378a5437f in Qt4ProjectManager::Qt4ProFileNode::update() /home/kkoehne/dev/creator-2.7/src/plugins/qt4projectmanager/qt4nodes.cpp:1604
#20 0x7fa378a56ddb in Qt4ProjectManager::Qt4ProFileNode::applyEvaluate(Qt4ProjectManager::Qt4ProFileNode::EvalResult, bool) /home/kkoehne/dev/creator-2.7/src/plugins/qt4projectmanager/qt4nodes.cpp:1880
#21 0x7fa378a5437f in Qt4ProjectManager::Qt4ProFileNode::update() /home/kkoehne/dev/creator-2.7/src/plugins/qt4projectmanager/qt4nodes.cpp:1604
#22 0x7fa378a2aae0 in Qt4ProjectManager::Qt4Project::update() /home/kkoehne/dev/creator-2.7/src/plugins/qt4projectmanager/qt4project.cpp:637
#23 0x7fa378a286b2 in Qt4ProjectManager::Qt4Project::fromMap(QMap<QString, QVariant> const&) /home/kkoehne/dev/creator-2.7/src/plugins/qt4projectmanager/qt4project.cpp:431
#24 0x7fa37eec71cc in ProjectExplorer::Project::restoreSettings() /home/kkoehne/dev/creator-2.7/src/plugins/projectexplorer/project.cpp:302
#25 0x7fa37eda5bbe in ProjectExplorer::ProjectExplorerPlugin::openProjects(QStringList const&, QString*) /home/kkoehne/dev/creator-2.7/src/plugins/projectexplorer/projectexplorer.cpp:1381
#26 0x7fa37eeb5df9 in ProjectExplorer::SessionManager::restoreProjects(QStringList const&) /home/kkoehne/dev/creator-2.7/src/plugins/projectexplorer/session.cpp:805
#27 0x7fa37eeb6b4a in ProjectExplorer::SessionManager::loadSession(QString const&) /home/kkoehne/dev/creator-2.7/src/plugins/projectexplorer/session.cpp:887 (discriminator 1)
#28 0x7fa37eda80eb in ProjectExplorer::ProjectExplorerPlugin::restoreSession() /home/kkoehne/dev/creator-2.7/src/plugins/projectexplorer/projectexplorer.cpp:1595
#29 0x7fa37f02a6d2 in ProjectExplorer::ProjectExplorerPlugin::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) /home/kkoehne/dev/creator-2.7-qt-5.1-gcc-4.8.0-64/src/plugins/projectexplorer/.moc/debug-shared/moc_projectexplorer.cpp:499
#30 0x7fa391d598ee in QMetaObject::activate(QObject*, int, int, void**) /home/kkoehne/dev/qt/qt-5.1/qtbase/src/corelib/kernel/qobject.cpp:3479 (discriminator 3)
#31 0x7fa391d589a3 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) /home/kkoehne/dev/qt/qt-5.1/qtbase/src/corelib/kernel/qobject.cpp:3354
#32 0x7fa3877a4e80 in Core::ICore::coreOpened() /home/kkoehne/dev/creator-2.7-qt-5.1-gcc-4.8.0-64/src/plugins/coreplugin/.moc/debug-shared/moc_icore.cpp:206
#33 0x7fa3875d7d47 in Core::Internal::MainWindow::extensionsInitialized() /home/kkoehne/dev/creator-2.7/src/plugins/coreplugin/mainwindow.cpp:381 (discriminator 1)
#34 0x7fa3876b7c34 in Core::Internal::CorePlugin::extensionsInitialized() /home/kkoehne/dev/creator-2.7/src/plugins/coreplugin/coreplugin.cpp:113
#35 0x7fa394e53411 in ExtensionSystem::Internal::PluginSpecPrivate::initializeExtensions() /home/kkoehne/dev/creator-2.7/src/libs/extensionsystem/pluginspec.cpp:1065
#36 0x7fa394e3c9fa in ExtensionSystem::Internal::PluginManagerPrivate::loadPlugin(ExtensionSystem::PluginSpec*, ExtensionSystem::PluginSpec::State) /home/kkoehne/dev/creator-2.7/src/libs/extensionsystem/pluginmanager.cpp:1132
#37 0x7fa394e3b44e in ExtensionSystem::Internal::PluginManagerPrivate::loadPlugins() /home/kkoehne/dev/creator-2.7/src/libs/extensionsystem/pluginmanager.cpp:1016 (discriminator 1)
#38 0x7fa394e35a84 in ExtensionSystem::PluginManager::loadPlugins() /home/kkoehne/dev/creator-2.7/src/libs/extensionsystem/pluginmanager.cpp:326
#39 0x410c27 in main /home/kkoehne/dev/creator-2.7/src/app/main.cpp:489
#40 0x7fa39084ba14 in __libc_start_main ??:?
#41 0x407798 in _start /home/abuild/rpmbuild/BUILD/glibc-2.17/csu/../sysdeps/x86_64/start.S:123
0x6084002c65be is located 958 bytes inside of 19766-byte region [0x6084002c6200,0x6084002caf36)
freed by thread T0 here:
#0 0x7fa3950a0c5a in __interceptor_free _asan_rtl_
#1 0x7fa391994e59 in QArrayData::deallocate(QArrayData*, unsigned long, unsigned long) /home/kkoehne/dev/qt/qt-5.1/qtbase/src/corelib/tools/qarraydata.cpp:125 (discriminator 2)
#2 0x7fa37b1f2eb4 in QTypedArrayData<unsigned short>::deallocate(QArrayData*) /home/kkoehne/dev/qt/qt-5.1-gcc-4.8.0-64/qtbase/include/QtCore/../../../../qt-5.1/qtbase/src/corelib/tools/qarraydata.h:230
#3 0x7fa37b1f2230 in QString::~QString() /home/kkoehne/dev/qt/qt-5.1-gcc-4.8.0-64/qtbase/include/QtCore/../../../../qt-5.1/qtbase/src/corelib/tools/qstring.h:911 (discriminator 1)
#4 0x7fa37b1f29cf in ProString::~ProString() /home/kkoehne/dev/creator-2.7/src/shared/proparser/proitems.h:67
#5 0x7fa37b221ddd in QVector<ProString>::destruct(ProString*, ProString*) /home/kkoehne/dev/qt/qt-5.1-gcc-4.8.0-64/qtbase/include/QtCore/../../../../qt-5.1/qtbase/src/corelib/tools/qvector.h:281
#6 0x7fa37b21e124 in QVector<ProString>::freeData(QTypedArrayData<ProString>*) /home/kkoehne/dev/qt/qt-5.1-gcc-4.8.0-64/qtbase/include/QtCore/../../../../qt-5.1/qtbase/src/corelib/tools/qvector.h:439
#7 0x7fa37b219277 in QVector<ProString>::~QVector() /home/kkoehne/dev/qt/qt-5.1-gcc-4.8.0-64/qtbase/include/QtCore/../../../../qt-5.1/qtbase/src/corelib/tools/qvector.h:74 (discriminator 1)
#8 0x7fa37b2186a7 in ProStringList::~ProStringList() /home/kkoehne/dev/creator-2.7/src/shared/proparser/proitems.h:223
#9 0x7fa37b2246c6 in QHashNode<ProKey, ProStringList>::~QHashNode() /home/kkoehne/dev/qt/qt-5.1-gcc-4.8.0-64/qtbase/include/QtCore/../../../../qt-5.1/qtbase/src/corelib/tools/qhash.h:205
#10 0x7fa37b22471d in QHash<ProKey, ProStringList>::deleteNode2(QHashData::Node*) /home/kkoehne/dev/qt/qt-5.1-gcc-4.8.0-64/qtbase/include/QtCore/../../../../qt-5.1/qtbase/src/corelib/tools/qhash.h:527
#11 0x7fa391a4f9eb in QHashData::free_helper(void (*)(QHashData::Node*)) /home/kkoehne/dev/qt/qt-5.1/qtbase/src/corelib/tools/qhash.cpp:406
#12 0x7fa37b21f1d2 in QHash<ProKey, ProStringList>::freeData(QHashData*) /home/kkoehne/dev/qt/qt-5.1-gcc-4.8.0-64/qtbase/include/QtCore/../../../../qt-5.1/qtbase/src/corelib/tools/qhash.h:574
#13 0x7fa37b21a211 in QHash<ProKey, ProStringList>::~QHash() /home/kkoehne/dev/qt/qt-5.1-gcc-4.8.0-64/qtbase/include/QtCore/../../../../qt-5.1/qtbase/src/corelib/tools/qhash.h:300 (discriminator 1)
#14 0x7fa37b21fbc9 in QLinkedListNode<QHash<ProKey, ProStringList> >::~QLinkedListNode() /home/kkoehne/dev/qt/qt-5.1-gcc-4.8.0-64/qtbase/include/QtCore/../../../../qt-5.1/qtbase/src/corelib/tools/qlinkedlist.h:65
#15 0x7fa37b21fc8d in QLinkedList<QHash<ProKey, ProStringList> >::freeData(QLinkedListData*) /home/kkoehne/dev/qt/qt-5.1-gcc-4.8.0-64/qtbase/include/QtCore/../../../../qt-5.1/qtbase/src/corelib/tools/qlinkedlist.h:284 (discriminator 1)
#16 0x7fa37b21adfd in QLinkedList<QHash<ProKey, ProStringList> >::~QLinkedList() /home/kkoehne/dev/qt/qt-5.1-gcc-4.8.0-64/qtbase/include/QtCore/../../../../qt-5.1/qtbase/src/corelib/tools/qlinkedlist.h:242
#17 0x7fa37b219039 in ProValueMapStack::~ProValueMapStack() /home/kkoehne/dev/creator-2.7/src/shared/proparser/qmakeevaluator.h:76
#18 0x7fa37b20728d in QMakeEvaluator::~QMakeEvaluator() /home/kkoehne/dev/creator-2.7/src/shared/proparser/qmakeevaluator.cpp:191 (discriminator 10)
#19 0x7fa37b22a595 in ProFileEvaluator::~ProFileEvaluator() /home/kkoehne/dev/creator-2.7/src/shared/proparser/profileevaluator.cpp:54 (discriminator 1)
#20 0x7fa37b2b7dce in QtSupport::ProFileReader::~ProFileReader() /home/kkoehne/dev/creator-2.7/src/plugins/qtsupport/profilereader.cpp:77 (discriminator 2)
#21 0x7fa37b2b7ed1 in QtSupport::ProFileReader::~ProFileReader() /home/kkoehne/dev/creator-2.7/src/plugins/qtsupport/profilereader.cpp:81
#22 0x7fa378a2d71f in Qt4ProjectManager::Qt4Project::destroyProFileReader(QtSupport::ProFileReader*) /home/kkoehne/dev/creator-2.7/src/plugins/qt4projectmanager/qt4project.cpp:991 (discriminator 1)
#23 0x7fa378a58d45 in Qt4ProjectManager::Qt4ProFileNode::applyEvaluate(Qt4ProjectManager::Qt4ProFileNode::EvalResult, bool) /home/kkoehne/dev/creator-2.7/src/plugins/qt4projectmanager/qt4nodes.cpp:1973
#24 0x7fa378a5437f in Qt4ProjectManager::Qt4ProFileNode::update() /home/kkoehne/dev/creator-2.7/src/plugins/qt4projectmanager/qt4nodes.cpp:1604
#25 0x7fa378a56ddb in Qt4ProjectManager::Qt4ProFileNode::applyEvaluate(Qt4ProjectManager::Qt4ProFileNode::EvalResult, bool) /home/kkoehne/dev/creator-2.7/src/plugins/qt4projectmanager/qt4nodes.cpp:1880
#26 0x7fa378a5437f in Qt4ProjectManager::Qt4ProFileNode::update() /home/kkoehne/dev/creator-2.7/src/plugins/qt4projectmanager/qt4nodes.cpp:1604
#27 0x7fa378a56ddb in Qt4ProjectManager::Qt4ProFileNode::applyEvaluate(Qt4ProjectManager::Qt4ProFileNode::EvalResult, bool) /home/kkoehne/dev/creator-2.7/src/plugins/qt4projectmanager/qt4nodes.cpp:1880
#28 0x7fa378a5437f in Qt4ProjectManager::Qt4ProFileNode::update() /home/kkoehne/dev/creator-2.7/src/plugins/qt4projectmanager/qt4nodes.cpp:1604
#29 0x7fa378a56ddb in Qt4ProjectManager::Qt4ProFileNode::applyEvaluate(Qt4ProjectManager::Qt4ProFileNode::EvalResult, bool) /home/kkoehne/dev/creator-2.7/src/plugins/qt4projectmanager/qt4nodes.cpp:1880
previously allocated by thread T0 here:
#0 0x7fa3950a0d3a in __interceptor_malloc _asan_rtl_
#1 0x7fa391994bf1 in QArrayData::allocate(unsigned long, unsigned long, unsigned long, QFlags<QArrayData::AllocationOption>) /home/kkoehne/dev/qt/qt-5.1/qtbase/src/corelib/tools/qarraydata.cpp:98
#2 0x7fa391ae3247 in QTypedArrayData<unsigned short>::allocate(unsigned long, QFlags<QArrayData::AllocationOption>) /home/kkoehne/dev/qt/qt-5.1-gcc-4.8.0-64/qtbase/src/corelib/../../include/QtCore/../../../../qt-5.1/qtbase/src/corelib/tools/qarraydata.h:224
#3 0x7fa391ac1c01 in QString::reallocData(unsigned int, bool) /home/kkoehne/dev/qt/qt-5.1/qtbase/src/corelib/tools/qstring.cpp:1278 (discriminator 3)
#4 0x7fa37b2004c0 in QString::reserve(int) /home/kkoehne/dev/qt/qt-5.1-gcc-4.8.0-64/qtbase/include/QtCore/../../../../qt-5.1/qtbase/src/corelib/tools/qstring.h:916
#5 0x7fa37b1f7533 in QMakeParser::read(ProFile*, QString const&, int, QMakeParser::SubGrammar) /home/kkoehne/dev/creator-2.7/src/shared/proparser/qmakeparser.cpp:303
#6 0x7fa37b1f6e51 in QMakeParser::read(ProFile*) /home/kkoehne/dev/creator-2.7/src/shared/proparser/qmakeparser.cpp:233
#7 0x7fa37b1f675c in QMakeParser::parsedProFile(QString const&, bool) /home/kkoehne/dev/creator-2.7/src/shared/proparser/qmakeparser.cpp:194 (discriminator 1)
#8 0x7fa378a545aa in Qt4ProjectManager::Qt4ProFileNode::evaluate() /home/kkoehne/dev/creator-2.7/src/plugins/qt4projectmanager/qt4nodes.cpp:1621
#9 0x7fa378a54366 in Qt4ProjectManager::Qt4ProFileNode::update() /home/kkoehne/dev/creator-2.7/src/plugins/qt4projectmanager/qt4nodes.cpp:1603
#10 0x7fa378a56ddb in Qt4ProjectManager::Qt4ProFileNode::applyEvaluate(Qt4ProjectManager::Qt4ProFileNode::EvalResult, bool) /home/kkoehne/dev/creator-2.7/src/plugins/qt4projectmanager/qt4nodes.cpp:1880
#11 0x7fa378a5437f in Qt4ProjectManager::Qt4ProFileNode::update() /home/kkoehne/dev/creator-2.7/src/plugins/qt4projectmanager/qt4nodes.cpp:1604
#12 0x7fa378a56ddb in Qt4ProjectManager::Qt4ProFileNode::applyEvaluate(Qt4ProjectManager::Qt4ProFileNode::EvalResult, bool) /home/kkoehne/dev/creator-2.7/src/plugins/qt4projectmanager/qt4nodes.cpp:1880
#13 0x7fa378a5437f in Qt4ProjectManager::Qt4ProFileNode::update() /home/kkoehne/dev/creator-2.7/src/plugins/qt4projectmanager/qt4nodes.cpp:1604
#14 0x7fa378a56ddb in Qt4ProjectManager::Qt4ProFileNode::applyEvaluate(Qt4ProjectManager::Qt4ProFileNode::EvalResult, bool) /home/kkoehne/dev/creator-2.7/src/plugins/qt4projectmanager/qt4nodes.cpp:1880
#15 0x7fa378a5437f in Qt4ProjectManager::Qt4ProFileNode::update() /home/kkoehne/dev/creator-2.7/src/plugins/qt4projectmanager/qt4nodes.cpp:1604
#16 0x7fa378a2aae0 in Qt4ProjectManager::Qt4Project::update() /home/kkoehne/dev/creator-2.7/src/plugins/qt4projectmanager/qt4project.cpp:637
#17 0x7fa378a286b2 in Qt4ProjectManager::Qt4Project::fromMap(QMap<QString, QVariant> const&) /home/kkoehne/dev/creator-2.7/src/plugins/qt4projectmanager/qt4project.cpp:431
#18 0x7fa37eec71cc in ProjectExplorer::Project::restoreSettings() /home/kkoehne/dev/creator-2.7/src/plugins/projectexplorer/project.cpp:302
#19 0x7fa37eda5bbe in ProjectExplorer::ProjectExplorerPlugin::openProjects(QStringList const&, QString*) /home/kkoehne/dev/creator-2.7/src/plugins/projectexplorer/projectexplorer.cpp:1381
#20 0x7fa37eeb5df9 in ProjectExplorer::SessionManager::restoreProjects(QStringList const&) /home/kkoehne/dev/creator-2.7/src/plugins/projectexplorer/session.cpp:805
#21 0x7fa37eeb6b4a in ProjectExplorer::SessionManager::loadSession(QString const&) /home/kkoehne/dev/creator-2.7/src/plugins/projectexplorer/session.cpp:887 (discriminator 1)
#22 0x7fa37eda80eb in ProjectExplorer::ProjectExplorerPlugin::restoreSession() /home/kkoehne/dev/creator-2.7/src/plugins/projectexplorer/projectexplorer.cpp:1595
#23 0x7fa37f02a6d2 in ProjectExplorer::ProjectExplorerPlugin::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) /home/kkoehne/dev/creator-2.7-qt-5.1-gcc-4.8.0-64/src/plugins/projectexplorer/.moc/debug-shared/moc_projectexplorer.cpp:499
#24 0x7fa391d598ee in QMetaObject::activate(QObject*, int, int, void**) /home/kkoehne/dev/qt/qt-5.1/qtbase/src/corelib/kernel/qobject.cpp:3479 (discriminator 3)
#25 0x7fa391d589a3 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) /home/kkoehne/dev/qt/qt-5.1/qtbase/src/corelib/kernel/qobject.cpp:3354
#26 0x7fa3877a4e80 in Core::ICore::coreOpened() /home/kkoehne/dev/creator-2.7-qt-5.1-gcc-4.8.0-64/src/plugins/coreplugin/.moc/debug-shared/moc_icore.cpp:206
#27 0x7fa3875d7d47 in Core::Internal::MainWindow::extensionsInitialized() /home/kkoehne/dev/creator-2.7/src/plugins/coreplugin/mainwindow.cpp:381 (discriminator 1)
#28 0x7fa3876b7c34 in Core::Internal::CorePlugin::extensionsInitialized() /home/kkoehne/dev/creator-2.7/src/plugins/coreplugin/coreplugin.cpp:113
#29 0x7fa394e53411 in ExtensionSystem::Internal::PluginSpecPrivate::initializeExtensions() /home/kkoehne/dev/creator-2.7/src/libs/extensionsystem/pluginspec.cpp:1065
Shadow bytes around the buggy address:
0x0c1100050c60: fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa
0x0c1100050c70: fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa
0x0c1100050c80: fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa
0x0c1100050c90: fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa
0x0c1100050ca0: fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa
=>0x0c1100050cb0: fa fa fa fa fa fa fa[fa]fa fa fa fa fa fa fa fa
0x0c1100050cc0: fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa
0x0c1100050cd0: fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa
0x0c1100050ce0: fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa
0x0c1100050cf0: fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa
0x0c1100050d00: fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa
Shadow byte legend (one shadow byte represents 8 application bytes):
Addressable: 00
Partially addressable: 01 02 03 04 05 06 07
Heap left redzone: fa
Heap righ redzone: fb
Freed Heap region: fd
Stack left redzone: f1
Stack mid redzone: f2
Stack right redzone: f3
Stack partial redzone: f4
Stack after return: f5
Stack use after scope: f8
Global redzone: f9
Global init order: f6
Poisoned by user: f7
ASan internal: fe
==19580== ABORTING
- relates to
-
QTBUG-30779 QProcessEnvironment's implicit sharing is not thread safe
-
- Closed
-